--- a/src/main/resources/assets/lastsmith/lang/en_US.lang
+++ b/src/main/resources/assets/lastsmith/lang/en_US.lang
@@ -36,16 +36,16 @@ item.flammpfeil.slashblade.named.yingjian.name=-Sakura-giri-
 item.flammpfeil.slashblade.named.wenshi.name=-Bunshi-
 
 item.flammpfeil.slashblade.named.sagequoia.name=Named-Sagequoia-
-item.flammpfeil.slashblade.named.murakumo.name=天丛云
-item.flammpfeil.slashblade.named.ikaruga.name=斑鸠之刃
+item.flammpfeil.slashblade.named.murakumo.name=-Murakumo-
+item.flammpfeil.slashblade.named.ikaruga.name=-Ikaruga-
 
 item.flammpfeil.slashblade.named.mmf.zheng.name=Amagumo-Kanchi-
 item.flammpfeil.slashblade.named.mmf.limuness.name=-Limuness-
-item.flammpfeil.slashblade.named.mmf.r_liu.name=渝州-长清-
-item.flammpfeil.slashblade.named.mmf.fox.name=无铭-影狐-
+item.flammpfeil.slashblade.named.mmf.r_liu.name=-Cyanlacuight-
+item.flammpfeil.slashblade.named.mmf.fox.name=Anonymity-Vague Fox-
 item.flammpfeil.slashblade.named.mmf.nethop.name=-V.V.V.V.V.-
-item.flammpfeil.slashblade.named.mmf.lrsoft.name=-祭钢刃-
-item.flammpfeil.slashblade.named.mmf.tartaric_acid.name=Nichiyo-Koni-
+item.flammpfeil.slashblade.named.mmf.lrsoft.name=-Orlibur-
+item.flammpfeil.slashblade.named.mmf.tartaric_acid.name=Nichiyo-Kyoni-
 
 item.flammpfeil.slashblade.named.kogawa_normal.name=Common-SlashEdge-
 item.flammpfeil.slashblade.named.kogawa_rare.name=Named-SlashEdge-
