--- a/src/main/resources/assets/lastsmith/lang/en_US.lang
+++ b/src/main/resources/assets/lastsmith/lang/en_US.lang
@@ -11,8 +11,8 @@ item.flammpfeil.slashblade.named.hakurou.name=-Hakurouken-
 item.flammpfeil.slashblade.named.roukan.name=-Roukanken-
 item.flammpfeil.slashblade.named.roukan_nether.name=Gokukaiken-Roukanken-
 item.flammpfeil.slashblade.named.hakurou_nether.name=Gokukaiken-Hakurouken-
-item.flammpfeil.slashblade.named.roukan_xf.name=楼观旋风刃
-item.flammpfeil.slashblade.named.bailou_xf.name=白楼旋风刃
+item.flammpfeil.slashblade.named.roukan_xf.name=-Roukansenpuuzin-
+item.flammpfeil.slashblade.named.bailou_xf.name=-Hakurousenpuuzin-
 
 item.flammpfeil.slashblade.named.eievui.name=-Eievui-
 
